# fks_meta

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  MT5_INTEGRATION_STATUS.md  README.md  docker-compose.yml  entrypoint.sh
.github/workflows/: ci.yml  docker-build-push.yml  tests.yml
docs/: MT5_INTEGRATION_GUIDE.md
k8s/: health-checks.yaml
src/: lib.rs  main.rs
src/api/: health.rs  market.rs  mod.rs  orders.rs  positions.rs
src/config/: mod.rs
src/models/: mod.rs
src/mt5/: bridge.rs  client.rs  mod.rs  plugin.rs
tests/integration/: test_mt5_plugin.rs
tests/unit/: test_models.rs
