[package]
name = "fks_meta"
version = "0.1.0"
edition = "2021"
description = "MetaTrader 5 execution plugin for FKS Trading Systems"
authors = ["FKS Trading Systems"]
license = "MIT"

[features]
default = []
api = []  # Enable API endpoints (for standalone service)

[dependencies]
# Web framework
axum = { version = "0.8.4", features = ["json", "multipart"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

# Error handling
anyhow = "1.0.99"
thiserror = "2.0.16"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4.41", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12.23", features = ["json"] }

# For future DLL integration
# libloading = "0.8"  # Uncomment when implementing DLL integration

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Configuration
config = "0.14"

# Environment variables
dotenv = "0.15"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# MT5 integration (via named pipes or DLL)
# Note: MT5 integration typically requires MQL5 DLL or named pipe communication
# This is a placeholder - actual implementation depends on MT5 API access method

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

